@@ -5,7 +5,7 @@
 \usage{
      spg(par, fn, gr=NULL, method=3, project=NULL, 
            lower=-Inf, upper=Inf, projectArgs=NULL, 
-	   control=list(), quiet=FALSE, ...)
+	   control=list(), quiet=FALSE, alertConvergence=TRUE, ...)
  }
 \arguments{
     \item{par}{A real vector argument to \code{fn}, indicating the initial guess for the optimization of nonlinear 
@@ -51,6 +51,10 @@
     Note that the \code{control} variable \code{trace} and \code{quiet} 
     affect different printing, so if \code{trace} is not set to \code{FALSE} 
     there will be considerable printed output.}
+ 
+    \item{alertConvergence}{A logical variable. With the default \code{TRUE}
+    a warning is issued if convergence is not obtained. When set to \code{FALSE}
+    the warning is suppressed.}
 
     \item{...}{Additional arguments passed to \code{fn} and \code{gr}.
       (Both must accept any specified arguments, either 
